--- a/Auto Slideshow/style.css
+++ b/Auto Slideshow/style.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 body{
-    background-color: #7aacff;
+    background-color: transparent;;
 }
 .container{
     width: 85vmin;
