--- a/Auto-Slideshow/style.css
+++ b/Auto-Slideshow/style.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 body{
-    background-color: transparent;;
+    background-color: transparent;
 }
 .container{
     width: 85vmin;
