--- a/Auto-Slideshow/style.css
+++ b/Auto-Slideshow/style.css
@@ -36,16 +36,16 @@ body{
         transform: translateX(-100%);
     }
     55%{
-        transform: translateX(-100%);
+        transform: translateX(-200%);
     }
     75%{
         transform: translateX(-200%);
     }
     80%{
-        transform: translateX(-200%);
+        transform: translateX(0);
     }
     100%{
-        transform: translateX(-200%);
+        transform: translateX(0);
     }
 }
 img{
