--- a/Auto-Slideshow/style.css
+++ b/Auto-Slideshow/style.css
@@ -20,33 +20,36 @@ body{
 .wrapper{
     width: 100%;
     display: flex;
-    animation: slide 16s infinite;
+    animation: slide 15s linear infinite;
 }
-@keyframes slide{
-    0%{
-        transform: translateX(0);
-    }
-    15%{
-        transform: translateX(0);
-    }
-    18%{
-        transform: translateX(-100%);
-    }
-    48%{
-        transform: translateX(-100%);
-    }
-    51%{
-        transform: translateX(-200%);
-    }
-    81%{
-        transform: translateX(-200%);
-    }
-    84%{
-        transform: translateX(-300%);
-    }
-    100%{
-        transform: translateX(-300%);
-    }
+@keyframes slide {
+  0% {
+    transform: translateX(0);
+  }
+  20% {
+    transform: translateX(0);
+  }
+  25% {
+    transform: translateX(-100%);
+  }
+  45% {
+    transform: translateX(-100%);
+  }
+  50% {
+    transform: translateX(-200%);
+  }
+  70% {
+    transform: translateX(-200%);
+  }
+  75% {
+    transform: translateX(-300%);
+  }
+  95% {
+    transform: translateX(-300%);
+  }
+  100% {
+    transform: translateX(-400%);
+  }
 }
 img{
     width: 100%;
