--- a/Auto-Slideshow/style.css
+++ b/Auto-Slideshow/style.css
@@ -1,3 +1,8 @@
+ :root {
+   --num: 3;
+   --duration: 15s;
+  }
+
 *{
     padding: 0;
     margin: 0;
@@ -20,37 +25,37 @@ body{
 .wrapper{
     width: 100%;
     display: flex;
-    animation: slide 15s linear infinite;
+     animation: slide var(--duration) linear infinite;
 }
 @keyframes slide {
-  0% {
+   0% {
     transform: translateX(0);
-  }
-  20% {
+   }
+   20% {
     transform: translateX(0);
+   }
+   25% {
+    transform: translateX(calc(-100% * var(--num))));
+   }
+   45% {
+    transform: translateX(calc(-100% * var(--num))));
+   }
+   50% {
+    transform: translateX(calc(-200% * var(--num))));
+   }
+   70% {
+    transform: translateX(calc(-200% * var(--num))));
+   }
+   75% {
+    transform: translateX(calc(-300% * var(--num))));
+   }
+   95% {
+    transform: translateX(calc(-300% * var(--num))));
+   }
+   100% {
+    transform: translateX(calc(-400% * var(--num))));
+   }
   }
-  25% {
-    transform: translateX(-100%);
-  }
-  45% {
-    transform: translateX(-100%);
-  }
-  50% {
-    transform: translateX(-200%);
-  }
-  70% {
-    transform: translateX(-200%);
-  }
-  75% {
-    transform: translateX(-300%);
-  }
-  95% {
-    transform: translateX(-300%);
-  }
-  100% {
-    transform: translateX(-400%);
-  }
-}
 img{
     width: 100%;
 }
