--- a/Auto-Slideshow/style.css
+++ b/Auto-Slideshow/style.css
@@ -17,39 +17,46 @@ body{
     border-radius: 8px;
     box-shadow: 10px 25px 30px rgba(220,220,220,0.3);
 }
-.wrapper{
-    width: 100%;
+.wrapper {
+    width: 400%;
     display: flex;
     animation: slide 15s linear infinite;
 }
 @keyframes slide {
-  0% {
-    transform: translateX(0);
-  }
-  20% {
-    transform: translateX(0);
-  }
-  25% {
-    transform: translateX(-100%);
-  }
-  45% {
-    transform: translateX(-100%);
-  }
-  50% {
-    transform: translateX(-200%);
-  }
-  70% {
-    transform: translateX(-200%);
-  }
-  75% {
-    transform: translateX(-300%);
-  }
-  95% {
-    transform: translateX(-300%);
-  }
-  100% {
-    transform: translateX(-400%);
-  }
+    0% {
+        transform: translateX(0);
+    }
+    20% {
+        transform: translateX(0);
+    }
+    25% {
+        transform: translateX(-100%);
+    }
+    45% {
+        transform: translateX(-100%);
+    }
+    50% {
+        transform: translateX(-200%);
+    }
+    70% {
+        transform: translateX(-200%);
+    }
+    75% {
+        transform: translateX(-300%);
+    }
+    95% {
+        transform: translateX(-300%);
+    }
+    100% {
+        transform: translateX(-400%);
+    }
+    /* 新增的動畫段落 */
+    101% {
+        transform: translateX(-400%);
+    }
+    105% {
+        transform: translateX(0);
+    }
 }
 img{
     width: 100%;
