--- a/Auto-Slideshow/style.css
+++ b/Auto-Slideshow/style.css
@@ -1,57 +1,60 @@
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
 }
-body {
-  background-color: transparent;
+body{
+    background-color: transparent;
 }
-.container {
-  width: 100vw;
-  height: 100vh;
-  position: fixed;
-  top: 0;
-  left: 0;
-  overflow: hidden;
-  border: 20px solid #ffffff;
-  border-radius: 8px;
-  box-shadow: 10px 25px 30px rgba(220, 220, 220, 0.3);
+.container{
+    width: 85vmin;
+    height: 85vmin;
+    max-width: 100%;
+    max-height: 100%;
+    position: absolute;
+    transform: translate(-50%,-50%);
+    top: 50%;
+    left: 50%;
+    overflow: hidden;
+    border: 20px solid #ffffff;
+    border-radius: 8px;
+    box-shadow: 
+    10px 25px 30px rgba(220,220,220,0.3), /* 陰影1：下方和右方 */
+    5px 5px 30px rgba(220,220,220,0.3));     /* 陰影2：上方和左方 */
+
 }
-.wrapper {
-  width: 400%; /* 圖片數量乘以100% */
-  display: flex;
-  animation: slide 15s linear infinite;
+.wrapper{
+    width: 400%;
+    display: flex;
+    animation: slide 15s linear infinite;
+}
+.wrapper img {
+    width: 25%;
+    height: auto;
 }
 @keyframes slide {
   0% {
     transform: translateX(0);
   }
-  /* 每張圖片佔25% */
-  20% {
-    transform: translateX(0%);
-  }
   25% {
-    transform: translateX(-25%);
+    transform: translateX(0);
   }
-  45% {
-    transform: translateX(-25%);
-  }
-  50% {
-    transform: translateX(-50%);
-  }
-  70% {
-    transform: translateX(-50%);
-  }
-  75% {
-    transform: translateX(-75%);
-  }
-  95% {
-    transform: translateX(-75%);
-  }
-  100% {
+  30% {
     transform: translateX(-100%);
   }
-}
-img {
-  width: 100%;
+  55% {
+    transform: translateX(-100%);
+  }
+  60% {
+    transform: translateX(-200%);
+  }
+  85% {
+    transform: translateX(-200%);
+  }
+  90% {
+    transform: translateX(-300%);
+  }
+  100% {
+    transform: translateX(-300%);
+  }
 }
