--- a/Auto-Slideshow/style.css
+++ b/Auto-Slideshow/style.css
@@ -21,6 +21,8 @@ body{
 
     
 }
+/* set in index.html */
+/*
 .wrapper{
     width: 100%;
     display: flex;
@@ -52,6 +54,7 @@ body{
     transform: translateX(-300%);
   }
 }
+*/
 img{
     width: 100%;
 }
